# ScrapWikipediaPage

./: .gitignore  README.md  pyproject.toml
app/: main.py  results.html
tests/: test_cleaning.py  test_cleaning_animal_names.py
utils/: cleaning.py  download_images.py
